--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,8 @@
 <h1> <%= @article.title %> </h1>
 <p> <%= @article.body %> </p>
 
+<%= link_to "delete", article_path(@article), method: :delete, data: {confirm: "Really delete the article?"} %>
+
+<br />
+
 <%= link_to "<< Back to articles list", articles_path %>
