--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,7 @@
+
+<h3>Comments (<%= @article.comments.size %>)</h3>
+
+<br />
 <h1> <%= @article.title %> </h1>
 <p> <%= @article.body %> </p>
 
@@ -8,4 +12,5 @@
 
 <br />
 
+<%= render partial: 'comments/form' %>
 <%= link_to "<< Back to articles list", articles_path %>
