--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -11,6 +11,9 @@
 <%= link_to "delete", article_path(@article), method: :delete, data: {confirm: "Really delete the article?"} %>
 
 <br />
+<h3>Comments</h3>
+<%= render partial: 'articles/comment', collection: @article.comments %>
+<br />
 
 <%= render partial: 'comments/form' %>
 <%= link_to "<< Back to articles list", articles_path %>
