--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,9 @@
 
 <h3>Comments (<%= @article.comments.size %>)</h3>
 
+
 <br />
+<% if logged_in? %>
 <h1> <%= @article.title %> </h1>
 <p>
   Tags:
@@ -11,7 +13,7 @@
 </p>
 <p><%= image_tag @article.image.url %></p>
 <p> <%= @article.body %> </p>
-
+<% end %>
 <br />
 <%= link_to "edit", edit_article_path(@article) %>
 <br />
